force-app/main/default/objects/Hierarchy_Settings__c/Hierarchy_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All hierarchy settings.</description>
    <label>Hierarchy Settings</label>
</CustomObject>