force-app/main/default/objects/Hierarchy_Settings__c/fields/Account_Processor__c.field-meta.xml
<CustomField>
    <fullName>Account_Processor__c</fullName>
    <description>ID of the default record type for Account. For example, if specifying Administrative (the recommended Account model), enter the ID of the Administrative record type for the Account object.</description>
    <inlineHelpText>ID of the default record type for Account. For example, if specifying Administrative (the recommended Account model), enter the ID of the Administrative record type for the Account object.</inlineHelpText>
    <label>Account Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>