force-app/main/default/objects/Hierarchy_Settings__c/fields/Admin_Account_Naming_Format__c.field-meta.xml
<CustomField>
    <fullName>Admin_Account_Naming_Format__c</fullName>
    <description>Stores the default format for Admin Account names.</description>
    <inlineHelpText>Stores the default format for Admin Account names.</inlineHelpText>
    <label>Admin Account Naming Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>