force-app/main/default/objects/Hierarchy_Settings__c/fields/Admin_Other_Name_Setting__c.field-meta.xml
<CustomField>
    <fullName>Admin_Other_Name_Setting__c</fullName>
    <description>Stores other info about Admin Account naming format.</description>
    <inlineHelpText>Stores other info about Admin Account naming format.</inlineHelpText>
    <label>Admin Other Name Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>