force-app/main/default/objects/Hierarchy_Settings__c/fields/Administrative_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Account_Record_Type__c</fullName>
    <description>The Account record type used for Administrative Accounts. This setting affects management of Address records and the naming format of Administrative Accounts.</description>
    <inlineHelpText>The Account record type used for Administrative Accounts. This setting affects management of Address records and the naming format of Administrative Accounts.</inlineHelpText>
    <label>Administrative Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>