force-app/main/default/objects/Hierarchy_Settings__c/fields/Advancement_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Namespace__c</fullName>
    <defaultValue>&quot;gem&quot;</defaultValue>
    <description>The namespace of the Gift Entry Manager managed package.</description>
    <inlineHelpText>The namespace of the Gift Entry Manager managed package.</inlineHelpText>
    <label>GEM Namespace</label>
    <length>10</length>
    <type>Text</type>
</CustomField>