force-app/main/default/objects/Hierarchy_Settings__c/fields/Affl_ProgEnroll_Copy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Affl_ProgEnroll_Copy_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&apos;s End Date. If disabled, don&apos;t specify the Affiliation&apos;s End Date.</description>
    <inlineHelpText>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&apos;s End Date. If disabled, don&apos;t specify the Affiliation&apos;s End Date.</inlineHelpText>
    <label>Affil End Date Copy from Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>