force-app/main/default/objects/Hierarchy_Settings__c/fields/Affl_ProgEnroll_Role_Map__c.field-meta.xml
<CustomField>
    <fullName>Affl_ProgEnroll_Role_Map__c</fullName>
    <description>If the related setting, Affil Set Role When Create Prog Enroll, is enabled, this setting specifies the value to set for the Role on the Affiliation created with a Program Enrollment.</description>
    <inlineHelpText>If the related setting, Affil Set Role When Create Prog Enroll, is enabled, this setting specifies the value to set for the Role on the Affiliation created with a Program Enrollment.</inlineHelpText>
    <label>Affil Role When Create Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>