force-app/main/default/objects/Hierarchy_Settings__c/fields/Affl_ProgEnroll_Status_Map__c.field-meta.xml
<CustomField>
    <fullName>Affl_ProgEnroll_Status_Map__c</fullName>
    <description>The value set for the Status of an Affiliation record automatically created with a Program Enrollment.</description>
    <inlineHelpText>The value set for the Status of an Affiliation record automatically created with a Program Enrollment.</inlineHelpText>
    <label>Affil Status When Create Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>