force-app/main/default/objects/Hierarchy_Settings__c/fields/Allow_AutoCreated_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Allow_AutoCreated_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-created Relationships are deduplicated to prevent duplication of Relationship records between Contacts. Select Allow Auto-Created Duplicate Relations to disable this behavior and allow multiple Relationships of the same type between two Contacts.</description>
    <inlineHelpText>Auto-created Relationships are deduplicated to prevent duplication of Relationship records between Contacts. Select Allow Auto-Created Duplicate Relations to disable this behavior and allow multiple Relationships of the same type between two Contacts.</inlineHelpText>
    <label>Allow Auto-Created Duplicate Relations</label>
    <type>Checkbox</type>
</CustomField>