force-app/main/default/objects/Hierarchy_Settings__c/fields/Automatic_Household_Naming__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Household_Naming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, the Household Name is automatically set based on the Household Name Format settings.</description>
    <inlineHelpText>If enabled, the Household Name is automatically set based on the Household Name Format settings.</inlineHelpText>
    <label>Automatic Household Naming</label>
    <type>Checkbox</type>
</CustomField>