force-app/main/default/objects/Hierarchy_Settings__c/fields/Contacts_Addresses_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Addresses_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables multi-address functionality for Contacts.</description>
    <inlineHelpText>Enables multi-address functionality for Contacts.</inlineHelpText>
    <label>Address management support for Contacts.</label>
    <type>Checkbox</type>
</CustomField>