force-app/main/default/objects/Hierarchy_Settings__c/fields/Default_Contact_Language_Fluency__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact_Language_Fluency__c</fullName>
    <description>The Fluency value automatically set on newly created Contact Language records when users set the Primary Language lookup field on a Contact.</description>
    <inlineHelpText>The Fluency value automatically set on newly created Contact Language records when users set the Primary Language lookup field on a Contact.</inlineHelpText>
    <label>Default Contact Language Fluency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>