force-app/main/default/objects/Hierarchy_Settings__c/fields/Disable_Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>Disable_Error_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the custom error handling framework is disabled.</description>
    <inlineHelpText>If selected, the custom error handling framework is disabled.</inlineHelpText>
    <label>Disable Error Handling</label>
    <type>Checkbox</type>
</CustomField>