force-app/main/default/objects/Hierarchy_Settings__c/fields/Disable_Preferred_Phone_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>Disable_Preferred_Phone_Enforcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the enforcement of the Preferred Phone field for Contact.</description>
    <inlineHelpText>Select to disable the enforcement of the Preferred Phone field for Contacts.</inlineHelpText>
    <label>Disable Preferred Phone Enforcement</label>
    <type>Checkbox</type>
</CustomField>