force-app/main/default/objects/Hierarchy_Settings__c/fields/Enable_New_Preferred_Phone_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_New_Preferred_Phone_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns on the Preferred Phone functionality that was released in EDA 1.82. This functionality syncs the Preferred Phone field to the Contact&apos;s standard Phone field and validates that the value in Preferred Phone exists and has a value.</description>
    <inlineHelpText>Sync the Preferred Phone field to the Contact&apos;s standard Phone field and validates that the value in Preferred Phone exists and has a value.</inlineHelpText>
    <label>Enable New Preferred Phone Sync</label>
    <type>Checkbox</type>
</CustomField>