force-app/main/default/objects/Hierarchy_Settings__c/fields/Faculty_RecType__c.field-meta.xml
<CustomField>
    <fullName>Faculty_RecType__c</fullName>
    <description>The default Contact record type for Faculty when creating a Course Connection record.</description>
    <inlineHelpText>The default Contact record type for Faculty when creating a Course Connection record.</inlineHelpText>
    <label>Faculty Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>