force-app/main/default/objects/Hierarchy_Settings__c/fields/Household_Account_Naming_Format__c.field-meta.xml
<CustomField>
    <fullName>Household_Account_Naming_Format__c</fullName>
    <description>Stores the Household Account Naming Format.</description>
    <inlineHelpText>Stores the Household Account Naming Format.</inlineHelpText>
    <label>Household Account Naming Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>