force-app/main/default/objects/Hierarchy_Settings__c/fields/Household_Addresses_RecType__c.field-meta.xml
<CustomField>
    <fullName>Household_Addresses_RecType__c</fullName>
    <description>The Account record type used for Household Accounts. This setting affects management of Address records and the naming format of Household Accounts.</description>
    <inlineHelpText>The Account record type used for Household Accounts. This setting affects management of Address records and the naming format of Household Accounts.</inlineHelpText>
    <label>Household Addresses Acc Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>