force-app/main/default/objects/Hierarchy_Settings__c/fields/Household_Other_Name_Setting__c.field-meta.xml
<CustomField>
    <fullName>Household_Other_Name_Setting__c</fullName>
    <description>Stores other information about the Household Account naming format.</description>
    <inlineHelpText>Stores other information about the Household Account naming format.</inlineHelpText>
    <label>Household Other Name Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>