force-app/main/default/objects/Hierarchy_Settings__c/fields/Lead_Naming_Account_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Lead_Naming_Account_Record_Types__c</fullName>
    <description>The record types of Accounts to use EDA Account Naming for during Lead Conversion.</description>
    <inlineHelpText>The record types of Accounts to use EDA Account Naming for during Lead Conversion.</inlineHelpText>
    <label>Lead Naming Account Record Types</label>
    <type>TextArea</type>
</CustomField>