force-app/main/default/objects/Hierarchy_Settings__c/fields/Lead_Naming_Account_RTypes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Naming_Account_RTypes__c</fullName>
    <description>The Account record types to use EDA&apos;s account naming format when converting Leads.</description>
    <inlineHelpText>The Account record types to use EDA&apos;s account naming format when converting Leads.</inlineHelpText>
    <label>Lead-Converted Account Record Types</label>
    <type>TextArea</type>
</CustomField>