force-app/main/default/objects/Hierarchy_Settings__c/fields/Preferred_Phone_Selection__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Selection__c</fullName>
    <description>Select a desired Preferred Phone when the Data Cleanup batch job runs.</description>
    <inlineHelpText>Select a desired Preferred Phone when the Data Cleanup batch job runs.</inlineHelpText>
    <label>Preferred Phone Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>