force-app/main/default/objects/Hierarchy_Settings__c/fields/Prevent_Test_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Test_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for future use.</description>
    <label>Prevent Test Deletion</label>
    <type>Checkbox</type>
</CustomField>