force-app/main/default/objects/Hierarchy_Settings__c/fields/Prevent_Time_Block_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Time_Block_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for future use.</description>
    <label>Prevent Time Block Deletion</label>
    <type>Checkbox</type>
</CustomField>