force-app/main/default/objects/Hierarchy_Settings__c/fields/Reciprocal_Method__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Method__c</fullName>
    <description>Determines the method used to generate the reciprocal relationship. Use List Setting to use custom settings by gender. Use Value Inversion to invert the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
    <inlineHelpText>Determines the method used to generate the reciprocal relationship. Use List Setting to use custom settings by gender. Use Value Inversion to invert the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</inlineHelpText>
    <label>Reciprocal Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>