force-app/main/default/objects/Hierarchy_Settings__c/fields/Relationship_Name_Id_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name_Id_Field_Id__c</fullName>
    <description>This field is currently not used.</description>
    <inlineHelpText>This field is currently not used.</inlineHelpText>
    <label>Relationship Name Id Field Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>