force-app/main/default/objects/Hierarchy_Settings__c/fields/Store_Errors_On__c.field-meta.xml
<CustomField>
    <fullName>Store_Errors_On__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this feature to store errors.</description>
    <inlineHelpText>Enable this feature to store errors.</inlineHelpText>
    <label>Store Errors</label>
    <type>Checkbox</type>
</CustomField>