force-app/main/default/objects/Hierarchy_Settings__c/fields/Student_RecType__c.field-meta.xml
<CustomField>
    <fullName>Student_RecType__c</fullName>
    <description>The default record type when creating Course Connections for active students.</description>
    <label>Student Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>